--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import "node_modules/bootstrap/scss/bootstrap"
+
+$fa-font-path : "~@fortawesome/fontawesome-free/webfonts"
+@import "./node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
+@import "./node_modules/@fortawesome/fontawesome-free/scss/solid.scss"
